@@ -465,7 +465,7 @@ begin
           clickedClient, clickedButton = arg.split
 
           if clickedButton.to_i != PRIMARY_CLICK
-            Wmii.client(clickedClient).invert_selection!
+            Wmii.get_client(clickedClient).invert_selection!
           end
 
         when :Key
